# geocodificador_con_ia

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  example_env  project_documentation.md  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md
scripts/: evaluate_model.py
src/geocodificador_ine_mvp/: build_vector_store.py  data_preprocessing.py  main.py  search_models.py
terraform/: README.md  main.tf  outputs.tf  setup-gcs-backend.bat  terraform.tfvars.example  variables.tf
terraform/bootstrap/: backend-config.tpl  main.tf  outputs.tf  terraform-env.tpl  terraform.tfvars
tests/: conftest.py  test_data_preprocessing.py  test_search_models.py
utils/: logger.py
